// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should hide border on active 1`] = `
"<div class=\\"tabs\\"><header><div class=\\"highlight\\"><style>
        .highlight {
          background: #eaeaea;
          position: absolute;
          border-radius: 5px;
          width: 0px;
          left: -1000px;
          height: 0px;
          top: -1000px;
          opacity: 0;
          transition: 0.15s ease;
          transition-property: opacity, width, left, top;
        }
      </style></div><div class=\\"scroll-container\\"><div class=\\"tab hide-border\\" role=\\"button\\" data-geist=\\"tab-item\\">label1<style>
          .tab {
            position: relative;
            box-sizing: border-box;
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            white-space: nowrap;
            background-color: transparent;
            color: #666;
            user-select: none;
            display: flex;
            align-items: center;
            font-size: calc(0.875 * 16px);
            line-height: normal;
            width: auto;
            height: auto;
            padding: calc(0.875 * 16px) calc(0.55 * 16px) calc(0.875 * 16px)
              calc(0.55 * 16px);
            margin: 0 calc(0.2 * 16px) 0 calc(0.2 * 16px);
            z-index: 1;
            --tabs-item-hover-left: calc(-1 * calc(0.28 * 16px));
            --tabs-item-hover-right: calc(-1 * calc(0.28 * 16px));
          }
          .tab:hover {
            color: #000;
          }
          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            border-radius: 4px;
            transform: scaleX(0.75);
            background-color: #000;
            transition: opacity, transform 200ms ease-in;
            opacity: 0;
          }
          .active:after {
            opacity: 1;
            transform: scaleX(1);
          }
          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }
          .tab:first-of-type {
            margin-left: 0;
          }
          .active {
            color: #000;
          }
          .disabled {
            color: #999;
            cursor: not-allowed;
          }
          .hide-border:before {
            display: block;
            content: label1;
            font-weight: 500;
            height: 0;
            overflow: hidden;
            visibility: hidden;
          }
          .hide-border:after {
            display: none;
          }
          .hide-border.active {
            font-weight: 500;
          }
        </style></div></div></header><div class=\\"content\\"></div><style>
          .tabs {
            font-size: calc(1 * 16px);
            width: initial;
            height: auto;
            padding: 0 0 0 0;
            margin: 0 0 0 0;
          }
          header {
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            overflow-y: hidden;
            overflow-x: scroll;
            scrollbar-width: none;
            position: relative;
          }
          .scroll-container {
            width: 100%;
            height: 100%;
            flex: 1;
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            justify-content: left;
            border-bottom: 1px solid #eaeaea;
            padding-left: 12px;
          }
          header::-webkit-scrollbar {
            display: none;
          }
          .hide-divider {
            border-color: transparent;
          }
          .content {
            padding-top: 0.625rem;
          }
        </style></div>"
`;

exports[`Tabs should render correctly 1`] = `
"<div class=\\"tabs\\"><header><div class=\\"highlight\\"><style>
        .highlight {
          background: #eaeaea;
          position: absolute;
          border-radius: 5px;
          width: 0px;
          left: -1000px;
          height: 0px;
          top: -1000px;
          opacity: 0;
          transition: 0.15s ease;
          transition-property: opacity, width, left, top;
        }
      </style></div><div class=\\"scroll-container\\"><div class=\\"tab\\" role=\\"button\\" data-geist=\\"tab-item\\">label1<style>
          .tab {
            position: relative;
            box-sizing: border-box;
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            white-space: nowrap;
            background-color: transparent;
            color: #666;
            user-select: none;
            display: flex;
            align-items: center;
            font-size: calc(0.875 * 16px);
            line-height: normal;
            width: auto;
            height: auto;
            padding: calc(0.875 * 16px) calc(0.55 * 16px) calc(0.875 * 16px)
              calc(0.55 * 16px);
            margin: 0 calc(0.2 * 16px) 0 calc(0.2 * 16px);
            z-index: 1;
            --tabs-item-hover-left: calc(-1 * calc(0.28 * 16px));
            --tabs-item-hover-right: calc(-1 * calc(0.28 * 16px));
          }
          .tab:hover {
            color: #000;
          }
          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            border-radius: 4px;
            transform: scaleX(0.75);
            background-color: #000;
            transition: opacity, transform 200ms ease-in;
            opacity: 0;
          }
          .active:after {
            opacity: 1;
            transform: scaleX(1);
          }
          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }
          .tab:first-of-type {
            margin-left: 0;
          }
          .active {
            color: #000;
          }
          .disabled {
            color: #999;
            cursor: not-allowed;
          }
          .hide-border:before {
            display: block;
            content: label1;
            font-weight: 500;
            height: 0;
            overflow: hidden;
            visibility: hidden;
          }
          .hide-border:after {
            display: none;
          }
          .hide-border.active {
            font-weight: 500;
          }
        </style></div><div class=\\"tab\\" role=\\"button\\" data-geist=\\"tab-item\\">label2<style>
          .tab {
            position: relative;
            box-sizing: border-box;
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            white-space: nowrap;
            background-color: transparent;
            color: #666;
            user-select: none;
            display: flex;
            align-items: center;
            font-size: calc(0.875 * 16px);
            line-height: normal;
            width: auto;
            height: auto;
            padding: calc(0.875 * 16px) calc(0.55 * 16px) calc(0.875 * 16px)
              calc(0.55 * 16px);
            margin: 0 calc(0.2 * 16px) 0 calc(0.2 * 16px);
            z-index: 1;
            --tabs-item-hover-left: calc(-1 * calc(0.28 * 16px));
            --tabs-item-hover-right: calc(-1 * calc(0.28 * 16px));
          }
          .tab:hover {
            color: #000;
          }
          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            border-radius: 4px;
            transform: scaleX(0.75);
            background-color: #000;
            transition: opacity, transform 200ms ease-in;
            opacity: 0;
          }
          .active:after {
            opacity: 1;
            transform: scaleX(1);
          }
          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }
          .tab:first-of-type {
            margin-left: 0;
          }
          .active {
            color: #000;
          }
          .disabled {
            color: #999;
            cursor: not-allowed;
          }
          .hide-border:before {
            display: block;
            content: label2;
            font-weight: 500;
            height: 0;
            overflow: hidden;
            visibility: hidden;
          }
          .hide-border:after {
            display: none;
          }
          .hide-border.active {
            font-weight: 500;
          }
        </style></div></div></header><div class=\\"content\\"></div><style>
          .tabs {
            font-size: calc(1 * 16px);
            width: initial;
            height: auto;
            padding: 0 0 0 0;
            margin: 0 0 0 0;
          }
          header {
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            overflow-y: hidden;
            overflow-x: scroll;
            scrollbar-width: none;
            position: relative;
          }
          .scroll-container {
            width: 100%;
            height: 100%;
            flex: 1;
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            justify-content: left;
            border-bottom: 1px solid #eaeaea;
            padding-left: 12px;
          }
          header::-webkit-scrollbar {
            display: none;
          }
          .hide-divider {
            border-color: transparent;
          }
          .content {
            padding-top: 0.625rem;
          }
        </style></div>"
`;

exports[`Tabs should work correctly with different styles 1`] = `
"<div class=\\"tabs\\"><header><div class=\\"highlight\\"><style>
        .highlight {
          background: #eaeaea;
          position: absolute;
          border-radius: 5px;
          width: 0px;
          left: -1000px;
          height: 0px;
          top: -1000px;
          opacity: 0;
          transition: 0.15s ease;
          transition-property: opacity, width, left, top;
        }
      </style></div><div class=\\"scroll-container hide-divider\\"><div class=\\"tab\\" role=\\"button\\" data-geist=\\"tab-item\\">label1<style>
          .tab {
            position: relative;
            box-sizing: border-box;
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            white-space: nowrap;
            background-color: transparent;
            color: #666;
            user-select: none;
            display: flex;
            align-items: center;
            font-size: calc(0.875 * 16px);
            line-height: normal;
            width: auto;
            height: auto;
            padding: calc(0.875 * 16px) calc(0.55 * 16px) calc(0.875 * 16px)
              calc(0.55 * 16px);
            margin: 0 calc(0.2 * 16px) 0 calc(0.2 * 16px);
            z-index: 1;
            --tabs-item-hover-left: calc(-1 * calc(0.28 * 16px));
            --tabs-item-hover-right: calc(-1 * calc(0.28 * 16px));
          }
          .tab:hover {
            color: #000;
          }
          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            border-radius: 4px;
            transform: scaleX(0.75);
            background-color: #000;
            transition: opacity, transform 200ms ease-in;
            opacity: 0;
          }
          .active:after {
            opacity: 1;
            transform: scaleX(1);
          }
          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }
          .tab:first-of-type {
            margin-left: 0;
          }
          .active {
            color: #000;
          }
          .disabled {
            color: #999;
            cursor: not-allowed;
          }
          .hide-border:before {
            display: block;
            content: label1;
            font-weight: 500;
            height: 0;
            overflow: hidden;
            visibility: hidden;
          }
          .hide-border:after {
            display: none;
          }
          .hide-border.active {
            font-weight: 500;
          }
        </style></div></div></header><div class=\\"content\\"></div><style>
          .tabs {
            font-size: calc(1 * 16px);
            width: initial;
            height: auto;
            padding: 0 0 0 0;
            margin: 0 0 0 0;
          }
          header {
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            overflow-y: hidden;
            overflow-x: scroll;
            scrollbar-width: none;
            position: relative;
          }
          .scroll-container {
            width: 100%;
            height: 100%;
            flex: 1;
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            justify-content: left;
            border-bottom: 1px solid #eaeaea;
            padding-left: 12px;
          }
          header::-webkit-scrollbar {
            display: none;
          }
          .hide-divider {
            border-color: transparent;
          }
          .content {
            padding-top: 0.625rem;
          }
        </style></div>"
`;
